--- a/ConsoleApplication.Tests/ConsoleApplication.Tests.csproj
+++ b/ConsoleApplication.Tests/ConsoleApplication.Tests.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="BankAccountNS.Test" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
